# ska-low-mccs-pasd

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  .release  CHANGELOG  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  MANIFEST.skao.int  Makefile  README.md  aa0.5-template.yaml  config.txt  low-itf-template.yaml  mypy.ini  pyproject.toml  sonar-project.properties  testing.py  values-ci-all-sbs.yaml
.devcontainer/: Dockerfile  devcontainer.json  git-pre-commit-hook  git-prepare-commit-msg-hook  make-autocompletion
charts/ska-low-mccs-pasd/: Chart.yaml  README.md  values.schema.json  values.yaml
charts/ska-low-mccs-pasd/data/: aavs2.yaml  configuration.json  fieldstations.yaml  fnccs.yaml  fndhs.yaml  pasd.yaml  pasd_configuration.yaml  pasd_device_server.yaml  pasdbuses.yaml  pasds.yaml  smartbox.yaml  smartboxes.yaml
charts/ska-low-mccs-pasd/templates/: deviceservers.yaml  field_station_configurator.yaml  mccs_configurator.yaml  pasd_configuration.yaml  pasd_configuration_server.yaml  pasd_egress.yaml  pasd_simulators.yaml
charts/umbrella-mccs-pasd/: Chart.yaml  values.yaml
dashboards/: FieldStationDashboard.wj
docs/: requirements.txt
docs/scripts/: document_schemas.py
docs/src/: conf.py  index.rst
docs/src/api/: command_proxy.rst  index.rst
docs/src/developer/: deploy.rst
docs/src/guide/: deploy.rst
docs/src/schemas/: index.rst
docs/src/user/: field_station.rst  fncc.rst  fndh.rst  guide.rst  index.rst  pasd_bus.rst  smartbox.rst
helmfile.d/: helmfile.yaml  helmfile.yaml.gotmpl
helmfile.d/pasd/templates/: fieldstations.yaml.gotmpl  fnccs.yaml.gotmpl  fndhs.yaml.gotmpl  pasdbuses.yaml.gotmpl  pasdconfiguration.yaml.gotmpl  smartboxes.yaml.gotmpl
helmfile.d/pasd/values/: values-aavs3-staging.yaml  values-aavs3-telmodel.yaml  values-arcetri.yaml.gotmpl  values-ci-telmodel.yaml  values-ci.yaml  values-gmrt.yaml.gotmpl  values-oxford.yaml.gotmpl  values-stfc-ci.yaml
helmfile.d/platform/: aavs2.yaml  aavs3.yaml  minikube.yaml  stfc-ci.yaml
helmfile.d/platform/aa0.5/: aa0-5-s10-3.yaml  aa0-5-s10-6.yaml  aa0-5-s8-1.yaml  aa0-5-s8-6.yaml  aa0-5-s9-2.yaml  aa0-5-s9-5.yaml
helmfile.d/values/: globals.yaml.gotmpl  values-aa0-5.yaml  values-aavs3.yaml  values-ci.yaml  values-low-itf.yaml
hw-test-values/: low-itf-hw-tests.yaml
hw-test-values/stations/: low-itf-hw-1.yaml
local_telmodel/stations/: ci-1.yaml
notebooks/: FieldStationOnOff.ipynb  VerificationTests.ipynb
resources/: eda_config.yaml
scripts/: generate_config.py  pasd_bus_connection_tests.py
src/ska_low_mccs_pasd/: __init__.py  command_proxy.py  pasd_controllers_configuration.py  pasd_controllers_configuration.yaml  pasd_data.py  pasd_utils.py
src/ska_low_mccs_pasd/configurator/: __init__.py  field_station_configmap_interface.py  field_station_configurator_server.py  mccs_configurator.py
src/ska_low_mccs_pasd/field_station/: __init__.py  field_station_component_manager.py  field_station_device.py  field_station_health_model.py  field_station_health_rules.py  schemas  temp.py
src/ska_low_mccs_pasd/fncc/: __init__.py  fncc_component_manager.py  fncc_device.py  fncc_health_model.py
src/ska_low_mccs_pasd/fndh/: __init__.py  fndh_component_manager.py  fndh_device.py  fndh_health_model.py  fndh_health_rules.py
src/ska_low_mccs_pasd/pasd_bus/: __init__.py  pasd_bus_component_manager.py  pasd_bus_connection_tests.py  pasd_bus_conversions.py  pasd_bus_custom_pymodbus.py  pasd_bus_device.py  pasd_bus_health_model.py  pasd_bus_json_api.py  pasd_bus_modbus_api.py  pasd_bus_poll_management.py  pasd_bus_register_map.py  pasd_bus_simulator.py  pasd_bus_simulator_server.py  pasd_default_thresholds.yaml  poll_failure_tracker.py  schemas  simulator_fndh_thresholds.yaml  simulator_smartbox_thresholds.yaml
src/ska_low_mccs_pasd/reference_data_store/: __init__.py  pasd_config_client_server.py  pasd_config_service.py  pasd_configmap_interface.py  pasd_configuration_server.py  schemas
src/ska_low_mccs_pasd/schemas/: __init__.py
src/ska_low_mccs_pasd/simulator_interface/: simulator_interface_api.py  simulator_interface_modbus_client.py  simulator_interface_server.py
src/ska_low_mccs_pasd/smart_box/: __init__.py  smart_box_component_manager.py  smart_box_device.py  smart_box_thresholds.py  smartbox_health_model.py  smartbox_health_rules.py
testing/docs/source/: index.rst
testing/src/tests/: conftest.py
tests/: conftest.py  harness.py  test_tools.py  xray-config.json
tests/data/: pasd_configuration.yaml
tests/functional/: conftest.py  requirements.txt  test_field_station_abort.py  test_field_station_mapping.py  test_fndh_tests.py  test_forwarded_attributes.py  test_monitor.py  test_monitor_and_control.py  test_on_off.py  test_placeholder.py  test_server.py  test_zforwarded_attributes.py
tests/functional/features/: field_station_abort.feature  field_station_antenna_power_control.feature  field_station_mapping.feature  fndh_deployment.feature  forwarded_attributes.feature  monitor.feature  monitor_and_control.feature  on_off.feature  server.feature
tests/integration/: __init__.py  conftest.py  test_admin_mode_propagation.py  test_field_station_commands.py  test_field_station_configure.py  test_field_station_health.py  test_fncc_pasdbus_integration.py  test_fndh_pasdbus_integration.py  test_smartbox_pasdbus_integration.py
tests/unit/: conftest.py
tests/unit/field_station/: __init__.py  conftest.py  test_field_station_component_manager.py  test_field_station_device.py  test_field_station_health_model.py
tests/unit/fncc/: __init__.py  test_fncc_component_manager.py  test_fncc_health_model.py
tests/unit/fndh/: __init__.py  conftest.py  test_fndh_component_manager.py  test_fndh_device.py  test_fndh_health_model.py
tests/unit/pasd_bus/: conftest.py  test_pasd_bus_component_manager.py  test_pasd_bus_conversions.py  test_pasd_bus_device.py  test_pasd_bus_json_api.py  test_pasd_bus_modbus_api.py  test_pasd_bus_simulator.py  test_poll_failure_tracker.py
tests/unit/smartbox/: __init__.py  conftest.py  (+3 more)
value-files/: values-egress.yaml
(+67 files in other folders)
