[tool.poetry]
name = "ska-low-mccs-pasd"
version = "3.1.0"
description = "The Monitoring, Control and Calibration Subsystem (MCCS) of the SKA Low telescope"
license = "BSD-3-Clause"
authors = ["MCCS team"]
readme = "README.md"
documentation = "https://developer.skatelescope.org/projects/ska-low-mccs-pasd"

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'
[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[tool.poetry.dependencies]
python = "~3.10"
kubernetes = "28.1.0"
numpy = "^1.26.4"
backoff = "^2.2.1"
pytango = "^10.0.0"
PyYAML = "^6.0"
ska-tango-base = "^1.3.2"
ska-control-model = { version = "^1.2.0", extras = ["health_rollup"] }
ska-low-mccs-common = "^1.3.0"
ska-ser-devices = "^0.2.0"
pymodbus = "~3.5.4"
typing-extensions = "^4.6.1"
fastapi = "^0.110.1"
ska-telmodel = "^1.14.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
cerberus = "^1.3.5"
pydantic-core = "^2.18.4"
annotated-types = "^0.7.0"
httptools = "0.6.1"
cachetools = "5.3.3"
click = "^8.1.7"
bidict = "^0.23.1"
google-auth = "2.33.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pylint = "^3.2.0"
pylint-junit = "^0.3.2"
pytest = "^8.2.0"
pytest-bdd = "^7.2.0"
pytest-cov = "^5.0.0"
pytest-forked = "^1.4.0"
pytest-json-report = "^1.5.0"
pytest-mock = "^3.8.2"
pytest-repeat = "^0.9.1"
pytest-timeout = "^2.1.0"
pytest-xdist = "^3.6.1"
coverage = "^6.4.2"
black = "^23.0.0"
darglint = "^1.8.1"
flake8 = "^7.1.0"
flake8-formatter-junit-xml = "^0.0.6"
flake8-builtins = "^2.5.0"
flake8-docstrings = "^1.6.0"
flake8-use-fstring = "^1.4"
flake8-rst-docstrings = "^0.3.0"
mypy = "^1.2.0"
pep8-naming = "^0.13.1"
types-PyYAML = "^6.0.11"
isort = "^5.10.1"
ska-tango-testing = "^0.7.3"
nbqa = "^1.8.5"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.2"
docutils = "^0.17"
fastapi = "^0.110.1"
sphinx-argparse = "^0.3"
PyYAML = "^6.0"
ska-ser-sphinx-theme = "^0.1.1"
sphinx-autodoc-typehints = "^1.19"
ska-ser-devices = "^0.2.0"
sphinxcontrib-plantuml = "^0.25"
# undeclared dependency-dependency
typing-extensions = "^4.6.1"
ska-telmodel = "^1.14.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
cerberus = "^1.3.5"

[tool.poetry.scripts]
pasd = "ska_low_mccs_pasd:main"
PasdBusSimulatorServer = "ska_low_mccs_pasd.pasd_bus.pasd_bus_simulator_server:main"
PasdConfigurationServer = "ska_low_mccs_pasd.reference_data_store.pasd_config_client_server:main"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = "tests/"
addopts = "--json-report --json-report-file=build/reports/report.json --cov-report html:build/htmlcov --cov-report xml:build/reports/code-coverage.xml --cov-report term:skip-covered --cov=ska_low_mccs_pasd --junitxml=build/reports/unit-tests.xml --verbose"
console_output_style = "progress"
junit_family = "legacy"
markers = [
    "SP-1931",
    "XTP-21594",
    "XTP-20301",
    "XTP-21514",
    "XTP-21515",
    "XTP-21516",
    "XTP-21517",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
data_file = ".coverage/.coverage"
branch = true
source = ["ska_low_mccs_pasd"]

[tool.coverage.report]
show_missing = false

[build-system]
requires = ["poetry-core>=1.1.13"]
build-backend = "poetry.core.masonry.api"
