[project]
dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "backoff>=2.2.1,<3.0.0",
    "pytango>=10.1.2,<11.0.0",
    "PyYAML>=6.0,<7.0",
    "ska-tango-base>=1.3.2,<1.4.0",
    "ska-control-model[health_rollup]>=1.2.0,<2.0.0",
    "ska-low-mccs-common>=4.4.0,<5.0.0",
    "ska-ser-devices>=0.2.0,<0.3.0",
    "pymodbus>=3.5.4,<3.6.0",
    "typing-extensions>=4.6.1,<5.0.0",
    "fastapi>=0.110.1,<0.111.0",
    "ska-telmodel>=1.14.0,<2.0.0",
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "cerberus>=1.3.5,<2.0.0",
    "referencing>=0.31.0,<0.32.0",
    "jsonschema-specifications>=2025.4.1,<2025.5.0",
    "pydantic-core>=2.18.4,<3.0.0",
    "annotated-types>=0.7.0,<0.8.0",
    "httptools==0.6.1",
    "cachetools==5.3.3",
    "click>=8.1.7,<9.0.0",
    "bidict>=0.23.1,<0.24.0",
    "google-auth==2.33.0",
    #"ska-low-pasd-driver>=0.4.0,<0.5.0",
    "ska-low-pasd-driver @ git+https://gitlab.com/ska-telescope/mccs/ska-low-pasd-driver.git@thorn-388-update-pymodbus",
    #"ska-low-pasd-driver @ file:/workspaces/ska-low-pasd-driver",
]
name = "ska-low-mccs-pasd"
version = "4.2.0"
description = "The Monitoring, Control and Calibration Subsystem (MCCS) of the SKA Low telescope"
license = "BSD-3-Clause"
authors = [{ name = "MCCS team" }]
readme = "README.md"
documentation = "https://developer.skatelescope.org/projects/ska-low-mccs-pasd"
requires-python = ">=3.10, <3.11"

[project.scripts]
pasd = "ska_low_mccs_pasd:main"
PasdConfigurationServer = "ska_low_mccs_pasd.reference_data_store.pasd_config_client_server:main"

[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "ska-nexus"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[[tool.uv.index]]
name = "PyPI-public"
url = "https://pypi.org/simple"

[dependency-groups]
dev = [
    "pre-commit>=2.20.0,<3.0.0",
    "pylint>=3.2.0,<4.0.0",
    "pylint-junit>=0.3.2,<0.4.0",
    "pytest>=8.2.0,<9.0.0",
    "pytest-bdd>=7.2.0,<8.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-forked>=1.4.0,<2.0.0",
    "pytest-json-report>=1.5.0,<2.0.0",
    "pytest-mock>=3.8.2,<4.0.0",
    "pytest-repeat>=0.9.1,<0.10.0",
    "pytest-timeout>=2.1.0,<3.0.0",
    "pytest-xdist>=3.6.1,<4.0.0",
    "coverage>=6.4.2,<7.0.0",
    "black>=23.0.0,<24.0.0",
    "darglint>=1.8.1,<2.0.0",
    "flake8>=7.1.0,<8.0.0",
    "flake8-formatter-junit-xml>=0.0.6,<0.0.7",
    "flake8-builtins>=2.5.0,<3.0.0",
    "flake8-docstrings>=1.6.0,<2.0.0",
    "flake8-use-fstring>=1.4,<2.0",
    "flake8-rst-docstrings>=0.3.0,<0.4.0",
    "mypy>=1.2.0,<2.0.0",
    "pep8-naming>=0.13.1,<0.14.0",
    "types-PyYAML>=6.0.11,<7.0.0",
    "isort>=5.10.1,<6.0.0",
    "ska-tango-testing>=0.7.3,<0.8.0",
    "nbqa>=1.8.5,<2.0.0",
    "check-jsonschema",
]
docs = [
    "sphinx>=8.1,<9.0",
    "docutils>=0.20,<0.22",
    "fastapi>=0.110.1,<0.111.0",
    "sphinx-argparse>=0.5.2,<0.6.0",
    "PyYAML>=6.0,<7.0",
    "ska-ser-sphinx-theme>=0.2.1,<0.3.0",
    "sphinx-autodoc-typehints>=1.19,<2.0",
    "ska-ser-devices>=0.2.0,<0.3.0",
    "sphinxcontrib-plantuml>=0.25,<0.26",
    "typing-extensions>=4.6.1,<5.0.0",
    "ska-telmodel>=1.14.0,<2.0.0",
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "cerberus>=1.3.5,<2.0.0",
]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = "tests/"
addopts = "--forked -n 16 --json-report --json-report-file=build/reports/report.json --cov-report html:build/htmlcov --cov-report xml:build/reports/code-coverage.xml --cov-report term:skip-covered --cov=ska_low_mccs_pasd --junitxml=build/reports/unit-tests.xml --verbose"
console_output_style = "progress"
junit_family = "legacy"
markers = [
    "SP-1931",
    "XTP-21594",
    "XTP-20301",
    "XTP-21514",
    "XTP-21515",
    "XTP-21516",
    "XTP-21517",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
data_file = ".coverage/.coverage"
branch = true
source = ["ska_low_mccs_pasd"]

[tool.coverage.report]
show_missing = false
